--- a/apps/web/src/app.html
+++ b/apps/web/src/app.html
@@ -14,7 +14,8 @@
 		</script>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+	<body data-sveltekit-preload-code="viewport">
+		<div id="app" style="display: contents">%sveltekit.body%</div>
+		<div id="modals"></div>
 	</body>
 </html>
