--- a/apps/web/src/app.html
+++ b/apps/web/src/app.html
@@ -15,6 +15,7 @@
 				document.documentElement.classList.remove('dark')
 			}
 		</script>
+		<script defer data-domain="vadirn.io" src="https://plausible.io/js/script.js"></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-code="viewport">
