--- a/apps/web/src/app.html
+++ b/apps/web/src/app.html
@@ -16,6 +16,7 @@
 			}
 		</script>
 		<script defer data-domain="vadirn.io" src="https://plausible.io/js/script.js"></script>
+		%unocss-svelte-scoped.global%
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-code="viewport">
